Fix up rogue scroll and makes the org/repo jump a bit better

--- a/public/less/community-create.less
+++ b/public/less/community-create.less
@@ -427,6 +427,7 @@
 
 
 .community-create-github-projects-tabbed-wrapper {
+  overflow: hidden;
   position: relative;
 }
 
